# f2t-lab

./: README.md  pyproject.toml
notebooks/01_from_functions_to_neural_networks/: function_fitting_lab.ipynb
notebooks/02_calculate_the_parameters_of_a_neural_network/: linear_regression_and_gradient_descent.ipynb
src/f2t_lab/: __init__.py
