[project]
name = "f2t-lab"
version = "0.0.1"
description = "f2t-lab 是一个跟随 飞天闪客 的视频教程，一步步实现一个 Transformer 的代码库"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=7.0.1",
    "ipython>=8.37.0",
    "matplotlib>=3.10.7",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
]

[tool.uv]
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple"

[[tool.uv.index]]
# name = "pytorch-cpu"
# url = "https://download.pytorch.org/whl/cpu"
name = "pytorch-cu129"
url = "https://download.pytorch.org/whl/cu129"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu129" },
]
torchvision = [
  { index = "pytorch-cu129" },
]
